--- a/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
@@ -335,6 +335,7 @@ Where:
     timeoutSeconds: 30
     intervalSeconds: 10
   ```
+- Please refer to the [operator reference docs](../../reference/installation/_api.mdx) for details about the Egress Gateway resource type.
 
 The health port `8080` is used by:
 
@@ -347,7 +348,7 @@ The health port `8080` is used by:
 
 ### Deploying on a RKE2 CIS Hardened Cluster
 
-If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSecurityPolicies` restrict the `securityContext` and `volumes` required by egress gateway. When deploying using the Egress Gateway custom resource, the Tigera Operator sets up `PodSecurityPolicy`, `ClusterRole` and associated `ServiceAccount`.
+If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSecurityPolicies` restrict the `securityContext` and `volumes` required by egress gateway. When deploying using the Egress Gateway custom resource, the Tigera Operator sets up `PodSecurityPolicy`, `Role`, `RoleBinding` and associated `ServiceAccount`.
 
 ### Configure a Namespace or Pod to use egress gateways
 
