--- a/calico-enterprise/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-aws.mdx
@@ -838,6 +838,7 @@ spec:
     timeoutSeconds: 30
     intervalSeconds: 10
   ```
+- Please refer to the [operator reference docs](../../reference/installation/_api.mdx) for details about the Egress Gateway resource type.
 
 :::note
 
@@ -1083,8 +1084,9 @@ From v3.16, Egress Gateway deployments are managed by the Tigera Operator.
   routes in the cluster. If the egress gateway daemon cannot reach the API, it will fail and report errors to the logs
   as it retries the connection.
 
-- When upgrading, create an egress gateway as mentioned [above](#deploy-a-group-of-egress-gateways) which exactly matches
-  the current egress gateway deployment.
+- When upgrading from a pre-v3.16 release, no automatic upgrade will occur. To upgrade a pre-v3.16 Egress Gateway deployment, 
+  create an equivalent EgressGateway resource with the same namespace and the same name as mentioned [above](#deploy-a-group-of-egress-gateways); 
+  the operator will then take over management of the old Deployment resource, replacing it with the upgraded version.
 
 - Use `kubectl apply` to create the egress gateway resource. Tigera Operator will read the newly created resource and wait
   for the other {{prodname}} components to be upgraded. Once the other {{prodname}} components are upgraded, Tigera Operator
