--- a/calico_versioned_docs/version-3.25/operations/troubleshoot/commands.mdx
+++ b/calico_versioned_docs/version-3.25/operations/troubleshoot/commands.mdx
@@ -163,7 +163,7 @@ systemctl status kubelet
 If there is a problem, check the journal
 
 ```batch
-journalclt -u kubelet | head
+journalctl -u kubelet | head
 ```
 
 ### Check the status of other system pods
