Fix typo in example BGPFilter

--- a/calico-enterprise/reference/resources/bgpfilter.mdx
+++ b/calico-enterprise/reference/resources/bgpfilter.mdx
@@ -20,19 +20,19 @@ metadata:
   name: my-filter
 spec:
   exportV4:
-    - action: accept
+    - action: Accept
       matchOperator: In
       cidr: 77.0.0.0/16
   importV4:
-    - action: accept
+    - action: Accept
       matchOperator: NotIn
       cidr: 44.0.0.0/16
   exportV6:
-    - action: accept
+    - action: Accept
       matchOperator: Equal
       cidr: 9000::0/64
   importV6:
-    - action: accept
+    - action: Accept
       matchOperator: NotEqual
       cidr: 5000::0/64
 ```
